[metadata]
name = rowantree.contracts
version = 0.11.0
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = Rowan Tree Contracts
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
    pydantic ~=1.10

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
